# openapi.yaml
@@ -1537,6 +1537,13 @@
             }
           },
           {
+            "name": "IncludeAllStatuses",
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
             "name": "Tags",
             "in": "query",
             "schema": {
@@ -2662,6 +2669,13 @@
             "in": "query",
             "schema": {
               "$ref": "#/components/schemas/DeviceStatus"
+            }
+          },
+          {
+            "name": "IncludeAllStatuses",
+            "in": "query",
+            "schema": {
+              "type": "boolean"
             }
           },
           {
