# src/TechInventory.Api/Controllers/ExportsController.cs
@@ -105,6 +105,8 @@ public sealed class ExportsController(ISender sender, ILogger<ExportsController>
 
         public DeviceStatus? Status { get; init; }
 
+        public bool IncludeAllStatuses { get; init; }
+
         public string? Tags { get; init; }
 
         public int? PurchaseYearFrom { get; init; }
@@ -125,6 +127,7 @@ public sealed class ExportsController(ISender sender, ILogger<ExportsController>
                 LocationId,
                 NetworkId,
                 Status,
+                IncludeAllStatuses,
                 ParseTags(Tags),
                 PurchaseYearFrom,
                 PurchaseYearTo,
